cmake_minimum_required(VERSION 3.14)
project(ForgotCLearning C)

set(CMAKE_C_STANDARD 11)

add_executable(ForgotCLearning src/main.c src/support.c src/head2.h src/sort.c src/algorithm/array-demo.c src/algorithm/point-demo.c src/algorithm/kmp_demo.c src/algorithm/demo.c src/problemB/poblem1006.c src/problemA/problem1008.c)