cmake_minimum_required(VERSION 3.14)
project(ForgotCLearning C)

set(CMAKE_C_STANDARD 11)

add_executable(ForgotCLearning src/main.c src/support.c src/head2.h src/sort.c src/algorithm/array-demo.c src/algorithm/point-demo.c src/algorithm/kmp_demo.c src/algorithm/demo.c src/problemB/problem1006.c src/problemA/problem1008.c src/problemB/problem1001.c src/problemB/problem1002.c src/problemB/problem1003.c src/problemB/problem1004.c src/problemB/problem1005.c src/problemB/problem1007.c src/problemB/problem1008.c src/problemB/problem1009.c src/problemB/problem1010.c src/algorithm/string_demo.c src/problemB/problem1011.c src/problemB/problem1012.c src/problemB/problem1013.c src/problemB/problem1014.c src/problemB/problem1015.c src/problemB/problem1016.c src/problemB/problem1017.c src/problemB/problem1018.c src/problemB/problem1019.c src/problemB/problem1020.c src/problemB/problem1021.c src/problemB/problem1022.c)