cmake_minimum_required(VERSION 3.14)
project(ForgotCLearning C)

set(CMAKE_C_STANDARD 11)

add_executable(ForgotCLearning src/main.c src/head.h src/algorithm/sort.c src/algorithm/array-demo.c
        src/algorithm/point-demo.c src/algorithm/demo.c src/problemB/problem1006.c
        src/problemA/problem1008.c src/problemB/problem1001.c src/problemB/problem1002.c src/problemB/problem1003.c
        src/problemB/problem1004.c src/problemB/problem1005.c src/problemB/problem1007.c src/problemB/problem1008.c
        src/problemB/problem1009.c src/problemB/problem1010.c src/algorithm/string_demo.c src/problemB/problem1011.c
        src/problemB/problem1012.c src/problemB/problem1013.c src/problemB/problem1014.c src/problemB/problem1015.c
        src/problemB/problem1016.c src/problemB/problem1017.c src/problemB/problem1018.c src/problemB/problem1019.c
        src/problemB/problem1020.c src/problemB/problem1021.c src/problemB/problem1022.c src/problemB/problem1023.c
        src/problemB/problem1024.c src/problemB/problem1025.c src/problemB/problem1026.c src/problemB/problem1027.c
        src/problemB/problem1028.c src/problemB/problem1029.c src/problemB/problem1030.c src/problemB/problem1031.c
        src/problemB/problem1032.c src/problemB/problem1032.c src/problemB/problem1033.c src/problemB/problem1034.c
        src/problemB/problem1035.c src/problemB/problem1036.c src/problemB/problem1037.c src/problemB/problem1038.c
        src/problemB/problem1039.c src/problemB/problem1040.c src/problemB/problem1041.c src/problemB/problem1042.c
        src/problemB/problem1043.c src/problemB/problem1044.c src/problemB/problem1045.c src/problemB/problem1046.c
        src/problemB/problem1047.c src/problemB/problem1048.c src/problemB/problem1049.c src/problemB/problem1050.c
        src/problemB/problem1051.c src/problemB/problem1052.c src/problemB/problem1053.c src/problemB/problem1054.c
        src/problemB/problem1055.c src/problemB/problem1056.c src/problemB/problem1057.c src/problemB/problem1058.c
        src/problemB/problem1059.c src/problemB/problem1060.c src/problemB/problem1061.c src/problemB/problem1062.c
        src/problemB/problem1063.c src/problemB/problem1064.c src/problemB/problem1065.c src/problemB/problem1066.c
        src/problemB/problem1067.c src/problemB/problem1068.c src/problemB/problem1069.c src/problemB/problem1070.c
        src/problemB/problem1071.c src/problemB/problem1072.c src/problemB/problem1073.c src/problemB/problem1074.c
        src/problemB/problem1075.c src/problemB/problem1076.c src/problemB/problem1077.c src/problemB/problem1078.c
        src/problemB/problem1079.c src/problemB/problem1080.c src/problemB/problem1081.c src/problemB/problem1082.c
        src/problemB/problem1083.c src/problemB/problem1084.c src/problemB/problem1085.c src/problemB/problem1086.c
        src/problemB/problem1087.c src/problemB/problem1088.c src/problemB/problem1089.c src/problemB/problem1090.c
        src/problemB/problem1091.c src/problemB/problem1092.c src/problemB/problem1093.c src/problemB/problem1094.c
        src/problemB/problem1095.c
        src/algorithm/classics.c)